<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mobile Client</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="send">Send Coordinates</string>
    <string name="hint">User id goes here!</string>
    <string name="jsonLongitude">longitude</string>
    <string name="jsonLatitude">latitude</string>
    <string name="jsonUserId">userId</string>
    <string name="clear">Clear UserId</string>
    <string name="action_settings">Settings</string>
    <string name="start_tracking">Start Tracking</string>
    <string name="stop_tracking">Stop Tracking</string>

</resources>